fixed spacing between sidebar and main content

--- a/styles/sass/layout/_grid.scss
+++ b/styles/sass/layout/_grid.scss
@@ -4,22 +4,25 @@
     margin: 0 auto;
 
     &--sidebar-left  {
-        max-width: calc(#{$grid-width} * .25);
+        max-width: calc(#{$grid-width} * .35);
         margin-left: auto;
     }
 
     &--main-right {
-        max-width: calc(#{$grid-width} * .75);
+        max-width: calc(#{$grid-width} * .65);
         margin-right: auto;
     }
 }
 
 .sidebar--left {
-    flex: 1 0 calc(50% - (#{$grid-width} * .75));
+    flex: 1 0 calc(45% - (#{$grid-width} * .65));
+    margin-left: 5%;
+    margin-right: 9rem;
 }
 
 .main--right {
-    flex: 1 1 calc(50% - (#{$grid-width} * .25));
+    flex: 1 1 calc(45% - (#{$grid-width} * .35));
+    margin-right: 5%;
 }
 
 .flex-container {
